feat(identity-access): COM-43 implement Keycloak BFF login
